05/11 구글맵 현재위치기능, 지도검색기능추가 Merge remote-tracking branch 'origin/master'
# Conflicts:
#	.idea/misc.xml
#	.idea/vcs.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mobileApp.project.CoffeeYo">
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -11,7 +12,7 @@
         android:theme="@style/AppTheme.NoActionBar">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDEKKcTdEojuGYg1ubL6CkcKYVzePSaSHo">
+            android:value="AIzaSyAUQYLCQxDu6gKzhfBcUyhqZ9TULHcCYg0">
         </meta-data>
         <activity android:name=".MainActivity" >
             <intent-filter>
@@ -20,6 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".map_search"/>
     </application>
 
 </manifest>
