--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="false"
         android:icon="@drawable/icon"
@@ -13,32 +12,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".Login"></activity>
-        <activity android:name=".map_Search"/>
+        <activity android:name=".Login" />
+        <activity android:name=".map_Search" />
         <activity android:name=".LaunchApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UserActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
-        <activity android:name=".ManagerActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".NiceMainActivity" android:launchMode="singleTop">
+        <activity
+            android:name=".UserActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ManagerActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".NiceMainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
-
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:host="test1" android:scheme="practice" />
-
+                <data
+                    android:host="test1"
+                    android:scheme="practice" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBRH1pFRG06wrIHnGTr73XqigzlSv5SLCM" />
