--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <service
-            android:name=".MyService"
+            android:name=".MyServiceM"
             android:enabled="true"
             android:exported="true"></service>
+        <service
+            android:name=".MyService"
+            android:enabled="true"
+            android:exported="true" />
 
         <activity android:name=".Login" />
         <activity android:name=".map_Search" />
@@ -27,11 +31,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".UserActivity"
-            android:screenOrientation="portrait" />
+            android:name=".UserActivity" />
         <activity
-            android:name=".ManagerActivity"
-            android:screenOrientation="portrait" />
+            android:name=".ManagerActivity"/>
         <activity
             android:name=".NiceMainActivity"
             android:launchMode="singleTop">
